samples/_failures_safe/1761312816_ae256f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed914ffb.c: In function ‘main’:
./samples/SAFE/__tmp_ed914ffb.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ed914ffb.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if
      |                 ^
./samples/SAFE/__tmp_ed914ffb.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed914ffb.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed914ffb.c:153:17: error: expected declaration or statement at end of input
